--- a/manager/templates/manager/student_filter.html
+++ b/manager/templates/manager/student_filter.html
@@ -1,7 +1,6 @@
-{% extends 'base.html' %}
-
-{% block content %}
-<div class="container mt-3">
+{% extends 'base.html' %} {% block content %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<div class="container mt-3" id="cv">
     <h3 class="mb-4">Student Filter</h3>
 
     <div class="tbl-header">
@@ -57,13 +56,42 @@
 
 
             </table>
+
             <button class="btn btn-dark" role="button" style="display: block;margin-left: auto;margin-right: auto;" data-toggle="modal" data-target="#exampleModal">Send email to all student</button>
+
+            <br><br>
+            <button id="download" class="btn btn-dark" role="button" style="display: block;margin-left: auto;margin-right: auto;" data-toggle="modal" data-target="#exampleModal">dowload</button>
         </div>
+
+
+
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Send email content</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+                </div>
+                <div class="modal-body">
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" style="
+                        height: 200px;
+                    "></textarea>
+
+                    </textarea>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Send</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-{% endblock %}
-
-
-{% block javascript %}
+{% endblock %} {% block javascript %}
 <script>
     $(document).ready(function() {
         $('.menu-toggle').click(function() {
@@ -87,6 +115,40 @@
             $(".check").prop('checked', $(this).prop('checked'));
         });
 
+
+
+
     })
+
+
+    window.onload = function() {
+        document.getElementById("download")
+            .addEventListener("click", () => {
+                const cv = this.document.getElementById("cv");
+                console.log(cv);
+                console.log(window);
+                var opt = {
+                    margin: 1,
+                    filename: 'myfile.pdf',
+
+                    // html2canvas: {
+                    //     scale: 1
+                    // },
+                    jsPDF: {
+                        // unit: 'in',
+                        // format: 'letter',
+                        // orientation: 'landscape'
+                        orientation: 'p',
+                        unit: 'in',
+                        format: 'a4',
+
+                    }
+                };
+                html2pdf().from(cv).set(opt).save();
+            })
+    }
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 {% endblock %}
