--- a/templates/include.html
+++ b/templates/include.html
@@ -1,4 +1,5 @@
 <meta http-equiv="content-type" content="text/html; charset=windows-1252">
+<link href="static/global.css" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
   rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
   crossorigin="anonymous">
