--- a/front-end/src/Pages/student/css/cv-version-1.css
+++ b/front-end/src/Pages/student/css/cv-version-1.css
@@ -7,9 +7,9 @@
 }
 
 body {
-    background: #c4c4c4;
+    /* background: #c4c4c4; */
     font-size: 14px;
-    line-height: 20px;
+    /* line-height: 20px; */
 }
 
 .resume_wrapper {
