--- a/server/login/templates/login/login.html
+++ b/server/login/templates/login/login.html
@@ -11,13 +11,13 @@
                 <h4 class="mb-4">HKBU Login</h4>
 
                 <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Email Address</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    <label for="email" class="form-label">Email Address</label>
+                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
                 </div>
 
                 <div class="mb-4">
-                    <label for="exampleFormControlInput1" class="form-label">Password</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="your password">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" placeholder="your password">
                 </div>
 
                 <div class="mb-5">
