--- a/server/login/templates/login/login.html
+++ b/server/login/templates/login/login.html
@@ -1,8 +1,6 @@
-{% extends 'base.html'%}
-
-{% block content %}
+{% extends 'base.html'%} {% block content %}
 <div class="container d-flex justify-content-center align-items-center align-content-center h-100 flex-wrap">
-    
+
     <div class="row">
         <img src="static/HKBU_Logo.svg" class="mb-5" width="100" height="100">
 
@@ -10,22 +8,26 @@
             <div class="card-body">
                 <h4 class="mb-4">HKBU Login</h4>
 
+                <form method="post">
+                    {% csrf_token %}
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email Address</label>
+                        <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                    </div>
+
+                    <div class="mb-4">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="your password">
+                    </div>
+
+                    <div class="mb-5">
+                        <input type="submit" class="btn btn-dark w-100" value="Login">
+                    </div>
+                </form>
                 <div class="mb-3">
-                    <label for="email" class="form-label">Email Address</label>
-                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
-                </div>
-
-                <div class="mb-4">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="your password">
-                </div>
-
-                <div class="mb-5">
-                    <input type="submit" class="btn btn-dark w-100" value="Login">
-                </div>
-
-                <div class="mb-3">
-                    <center><p>Forgot password? <a href="#">Find your password</a></p></center>
+                    <center>
+                        <p>Forgot password? <a href="#">Find your password</a></p>
+                    </center>
                 </div>
             </div>
         </div>
