--- a/server/student/templates/student/profile.html
+++ b/server/student/templates/student/profile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/server/static/css/dynamic-fields.css" />
+    <link rel="stylesheet" type="text/css" href="../../../../static/css/dynamic-fields.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Document</title>
 
@@ -16,9 +16,7 @@
 
     <div class="row">
 
-        <div class="col-md-8 order-md-1" style="
-            margin: 0 auto;
-            width:250px;">
+        <div class="col-md-8 order-md-1" style="margin: 0 auto; width:250px;">
             <h4 class="mb-3">Personal Information</h4>
             <form class="needs-validation" novalidate="">
                 <div class="row">
