--- a/server/templates/nav_student.html
+++ b/server/templates/nav_student.html
@@ -1,13 +1,10 @@
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
+<nav class="navbar navbar-expand bg-body-tertiary bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="/static/HKBU_Logo.svg" width="30" height="30" />
         HKBU
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -15,5 +12,18 @@
           </li>
         </ul>
       </div>
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <button class="btn btn-dark" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fa-solid fa-user"></i>
+          </button>
+          <ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark" style="position:absolute">
+            <li><a class="dropdown-item" href="#">Profile</a></li>
+            <li><a class="dropdown-item" href="#">My CV templates</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Logout</a></li>
+          </ul>
+        </li>
+      </ul>
     </div>
-  </nav>
+</nav>
