--- a/server/student/templates/student/cvProfile.html
+++ b/server/student/templates/student/cvProfile.html
@@ -85,7 +85,18 @@
                         </div>
                         <div id="add_experience-1">
 
-                            <input type="text" class="survey_options skillBox" size="50" placeholder="School Name">
+                            <div class="row">
+                                <div class="col-md-6 mb-3">
+                                    <label for="firstName">School Name</label>
+                                    <input type="text" class="form-control" id="School-Name" placeholder="School Name" value="" required="">
+
+                                </div>
+                                <div class="col-md-6 mb-3">
+                                    <label for="lastName">major</label>
+                                    <input type="text" class="form-control" id="major" placeholder="Major" value="" required="">
+
+                                </div>
+                            </div>
                             <div class="row">
                                 <div class="col-md-6 mb-3">
                                     <label for="firstName">Start date</label>
@@ -104,7 +115,18 @@
                         <b><label for="exampleFormControlTextarea1">Education 2</label></b>
                         <div id="add_experience-2">
 
-                            <input type="text" class="survey_options skillBox" size="50" placeholder="School Name">
+                            <div class="row">
+                                <div class="col-md-6 mb-3">
+                                    <label for="firstName">School Name</label>
+                                    <input type="text" class="form-control" id="School-Name" placeholder="School Name" value="" required="">
+
+                                </div>
+                                <div class="col-md-6 mb-3">
+                                    <label for="lastName">major</label>
+                                    <input type="text" class="form-control" id="major" placeholder="Major" value="" required="">
+
+                                </div>
+                            </div>
                             <div class="row">
                                 <div class="col-md-6 mb-3">
                                     <label for="firstName">Start date</label>
@@ -123,7 +145,18 @@
                         <b> <label for="exampleFormControlTextarea1">Education 3</label></b>
                         <div id="add_experience-3">
 
-                            <input type="text" class="survey_options skillBox" size="50" placeholder="School Name">
+                            <div class="row">
+                                <div class="col-md-6 mb-3">
+                                    <label for="firstName">School Name</label>
+                                    <input type="text" class="form-control" id="School-Name" placeholder="School Name" value="" required="">
+
+                                </div>
+                                <div class="col-md-6 mb-3">
+                                    <label for="lastName">major</label>
+                                    <input type="text" class="form-control" id="major" placeholder="Major" value="" required="">
+
+                                </div>
+                            </div>
                             <div class="row">
                                 <div class="col-md-6 mb-3">
                                     <label for="firstName">Start date</label>
