--- a/server/student/templates/student/cvRecord.html
+++ b/server/student/templates/student/cvRecord.html
@@ -2,35 +2,37 @@
 <link rel="stylesheet" type="text/css" href="../../static/student/cvCard.css">{% endblock %} {% block content %}
 
 <h3 style="text-align: center;">Your Cv Record</h3>
-<div class="card-container cardLayout">
-    <span class="pro">PRO</span>
-    <img class="round" src="https://randomuser.me/api/portraits/women/79.jpg" alt="user" />
-    <h3>Ricky Park</h3>
-    <h6>New York</h6>
-    <p>User interface designer and <br/> front-end developer</p>
-    <div class="buttons">
-        <button class="primary">
-			Edit
-		</button>
-        <button class="primary ghost">
-			Delete
-		</button>
-    </div>
-    <div class="skills">
-        <h6>Skills</h6>
-        <ul>
-            <li>UI / UX</li>
-            <li>Front End Development</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>React</li>
-            <li>Node</li>
-        </ul>
-    </div>
-</div>
+    {% for cv in cv_list %}
+        <div class="card-container cardLayout">
+            <span class="pro">PRO</span>
+            <img class="round" src="https://randomuser.me/api/portraits/women/79.jpg" alt="user" />
+            <h3>{{cv.fristName}} {{cv.lastName}}</h3>
+            <h6>New York</h6>
+            <p>User interface designer and <br/> front-end developer</p>
+            <div class="buttons">
+                <button class="primary">
+                    Edit
+                </button>
+                <button class="primary ghost">
+                    Delete
+                </button>
+            </div>
+            <div class="skills">
+                <h6>Skills</h6>
+                <ul>
+                    <li>UI / UX</li>
+                    <li>Front End Development</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>React</li>
+                    <li>Node</li>
+                </ul>
+            </div>
+        </div>
+    {% endfor %}
 
-<div class="card-container cardLayout">
+{% comment %} <div class="card-container cardLayout">
     <span class="pro">PRO</span>
     <img class="round" src="https://randomuser.me/api/portraits/women/79.jpg" alt="user" />
     <h3>Ricky Park</h3>
@@ -56,7 +58,7 @@
             <li>Node</li>
         </ul>
     </div>
-</div>
+</div> {% endcomment %}
 
 
 <button class="btn btn-primary btn-lg btn-block" style="display: block;margin: 0 auto;" type="submit">Create New CV</button> {% endblock %}
